# SHIELD062726

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD_REPORT.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION.md  LICENSE  PR_DESCRIPTION.md  README.md  SECURITY.md  SMOKE_TEST.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: .dockerignore  Dockerfile  _pytest_out.txt  _run2.txt  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_user_lockout_columns.py  0003_intake.py  0004_artifacts.py  0005_notifications.py  0006_tech_debt.py  0007_llm_calls.py  0008_consolidation_plan.py  0009_csf_assessment.py  0010_zt_assessment.py  0011_attack_assessment.py  0012_service_request_targets.py  0013_multi_tenant_client_id.py  0014_questions.py  0015_drop_released_to_client_at.py  0016_client_domain.py  0017_messages.py  0018_deliverable_docx.py  0019_row_locked.py  0020_attack_dpr.py  0021_zt_target_stage.py  0022_risk_register.py  0023_risk_register_artifacts.py  0024_csf_dimension_scores.py  0025_documents_stale.py  0026_user_deactivated_at.py  0027_user_purged_at.py  0028_deliverable_html.py
apps/api/app/: __init__.py  bootstrap.py  config.py  dependencies.py  docx_export.py  exceptions.py  logging.py  main.py  provisioning.py  tenant.py
apps/api/app/ai/: __init__.py  diff.py  engine.py  jobs.py  llm.py  redact.py
apps/api/app/attack/: __init__.py  analytics.py  catalog.py  coverage.py  exporters.py
apps/api/app/audit/: __init__.py  spine.py
apps/api/app/csf/: __init__.py  catalog.py  exporters.py  gap.py  maturity.py  playbook.py  (+2 more)
apps/api/scripts/: _common.py  extract_csf_questionnaires.py  load_csf_tier_questionnaires.py  load_zt_questionnaires.py  purge_stale_users.py  seed_demo.py
apps/api/tests/: conftest.py
(+373 files in other folders)
