[project]
name = "shield-api"
version = "3.0.0"
description = "SHIELD by Kentro v3.0 - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis>=5.1",
    "celery>=5.4",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "structlog>=24.4",
    "boto3>=1.35",
    # Anthropic Claude SDK for live AI runs (app/ai/llm.py AnthropicProvider).
    # Imported lazily on first live call, so a missing declaration only
    # surfaces as a 500 ("No module named 'anthropic'") when SHIELD_LLM_MODE=live.
    "anthropic>=0.40",
    # Deliverable rendering (app/*/exporters.py): PDF via reportlab, XLSX via
    # openpyxl. Imported lazily inside the finalize endpoints, so a missing
    # declaration only surfaces as a 500 when a deliverable is rendered.
    "reportlab>=4.2",
    "openpyxl>=3.1",
    # Used by apps/api/scripts/extract_csf_questionnaires.py to parse the
    # Kentro Step 1.x interview .docx files into packages/csf-data/source/*.json.
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "bandit[toml]>=1.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast in-process tests",
    "integration: tests that hit a real database",
]
asyncio_mode = "auto"
addopts = "-ra -q"
